RESOLVED FIXED162356
Fix serialization of HTML Element attributes
https://bugs.webkit.org/show_bug.cgi?id=162356
Summary Fix serialization of HTML Element attributes
Chris Dumez
Reported 2016-09-21 13:00:04 PDT
Fix serialization of Element attributes to align with: - https://html.spec.whatwg.org/#html-fragment-serialisation-algorithm - https://html.spec.whatwg.org/#escapingString In particular, we should not escape '<' and '>'. Firefox and Chrome both match the specification.
Attachments
Patch (8.97 KB, patch)
2016-09-21 13:36 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-09-21 13:17:36 PDT
Only impacts HTML. For XML serialization, we are supposed to escape '<' / '>' in attribute values: - https://w3c.github.io/DOM-Parsing/#dfn-serializing-an-attribute-value
Chris Dumez
Comment 2 2016-09-21 13:36:33 PDT
WebKit Commit Bot
Comment 3 2016-09-21 15:48:08 PDT
Comment on attachment 289473 [details] Patch Rejecting attachment 289473 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 289473, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ckout/scm/scm.py", line 77, in run decode_output=decode_output) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/common/system/executive.py", line 443, in run_command output = output.decode(self._child_process_encoding()) File "/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/encodings/utf_8.py", line 16, in decode return codecs.utf_8_decode(input, errors, True) UnicodeDecodeError: 'utf8' codec can't decode byte 0xfc in position 146: invalid start byte Full output: http://webkit-queues.webkit.org/results/2120876
Chris Dumez
Comment 4 2016-09-21 15:55:06 PDT
Comment on attachment 289473 [details] Patch Clearing flags on attachment: 289473 Committed r206240: <http://trac.webkit.org/changeset/206240>
Chris Dumez
Comment 5 2016-09-21 15:55:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.