Fix serialization of HTML Element attributes https://bugs.webkit.org/show_bug.cgi?id=162356

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaseline W3C test now that more checks are passing.

* web-platform-tests/html/semantics/embedded-content/the-img-element/current-pixel-density/basic-expected.txt:
* web-platform-tests/html/syntax/serializing-html-fragments/serializing-expected.txt:

Source/WebCore:

Fix serialization of HTML Element attributes to align with:
- https://html.spec.whatwg.org/#html-fragment-serialisation-algorithm
- https://html.spec.whatwg.org/#escapingString

In particular, we should not escape '<' and '>'.

Firefox and Chrome both match the specification.

Note that we keep escaping '<' and '>' for Element attributes in the
context of XML serialization, as per:
- https://w3c.github.io/DOM-Parsing/#dfn-serializing-an-attribute-value

No new tests, rebaselined existing test.

* editing/MarkupAccumulator.h:

LayoutTests:

Rebaseline test to reflect behavior change.

* editing/pasteboard/paste-noscript-expected.txt:

Canonical link: https://commits.webkit.org/180386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206240 268f45cc-cd09-0410-ab3c-d52691b4dbfc